--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,60 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.divider {
+  width: 100%;
+  margin-bottom: 2%;
+  border-bottom: 1px solid lightgray;
+}
+.content-title {
+  font-style: italic;
+  font-weight: 300;
+}
+
+.title-button-container {
+  display: flex;
+  flex: 1 1 available;
+  //grid-gap: 2em;
+  //grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+}
+
+.full-width {
+  width: 100%;
+}
+.page-container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.text-right {
+  text-align: right;
+}
+
+mat-form-field.mat-form-field {
+  font-size: 16px;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.background {
+  background: url("https://images.unsplash.com/photo-1587321819113-cc19ebc6e5e3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-repeat: repeat;
+  background-position: center top;
+  -webkit-background-size: cover;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
